--- a/sass/_default.scss
+++ b/sass/_default.scss
@@ -68,3 +68,32 @@ body {
 
 	border-top: 1px solid #18CFAB;
 }
+
+.modal{
+	display: none;
+	position: fixed;
+	background: rgba(0, 0, 0, .7);
+	top:0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
+	.photo{
+		position: absolute;
+		right: 0;
+		left: 0;
+		top: 25%;
+		margin: auto;
+		width: 400px;
+		height: 400px;
+
+		img{
+			width: 100%;
+			height: 100%;
+		}
+	}
+
+	&.active{
+		display: block;
+	}
+}
