--- a/sass/_main-section.scss
+++ b/sass/_main-section.scss
@@ -152,10 +152,27 @@
 /*==== Section #about-us Start ====*/
 
 .about-us{
-	background: #090F14;
-	background-image: url(../img/pyramyde.png);
-	background-repeat: no-repeat;
-	background-position: -60% 101%;
+	background: url(../img/bg-about.jpg) no-repeat;
+	background-size: cover;
+	position: relative;
+
+	.img{
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		overflow: hidden;
+
+		background: rgba(15, 15, 15, .4);
+
+		img{
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 50%;
+		}
+	}
 
 	h2{
 		margin-top: 100px;
@@ -432,6 +449,8 @@
 				padding-top: 45px;
 
 				button{
+					width: 50px;
+					height: 50px;
 					cursor: pointer;
 					padding: 15px;
 
@@ -471,12 +490,49 @@
 				height: 100%;
 			}
 
-			.darkgreen{
-				background: #24413E;
+			.bg:not(.bg-9):not(.bg-12){
+				background-size: cover;
+				background-position: center;
 			}
 
-			.grey{
-				background: #8A8A8A;
+			.bg-1{
+				background: url(../img/wp-1.jpg);
+			}
+			.bg-2{
+				background: url(../img/web-1.jpg);
+			}
+			.bg-3{
+				background: url(../img/graphic-1.jpg);
+			}
+			.bg-4{
+				background: url(../img/landing-1.jpg);
+			}
+			.bg-5{
+				background: url(../img/wp-2.jpg);
+			}
+			.bg-6{
+				background: url(../img/landing-2.jpg);
+			}
+			.bg-7{
+				background: url(../img/web-2.png);
+			}
+			.bg-8{
+				background: url(../img/graphic-2.jpg);
+			}
+			.bg-9{
+				background: url(../img/graphci-3.jpg);
+				background-size: cover;
+			}
+			.bg-10{
+				background: url(../img/web-3.png);
+			}
+			.bg-11{
+				background: url(../img/landing-3.jpg);
+			}
+			.bg-12{
+				background: url(../img/wp-3.jpg);
+				background-size: 180%;
+				background-position: center;
 			}
 
 			&:hover{
@@ -633,47 +689,52 @@
 /*==== Section #purchase Start ====*/
 
 .purchase{
-	background: #40474B;
+	background: url(../img/bg-ready.jpg);
+	background-size: 100%;
 
-	.title{
-		margin-bottom: 35px;
-		padding-top: 130px;
+	.container-fluid{
+		background-color: rgba(0, 3, 0, 0.4);
 
-		color: #18CFAB;
+		.title{
+			margin-bottom: 35px;
+			padding-top: 130px;
 
-		font-family: "Montserrat-Bold";
-		font-size: 40px;
-	}
+			color: #18CFAB;
 
-	.subtitle{
-		margin-bottom: 76px;
+			font-family: "Montserrat-Bold";
+			font-size: 40px;
+		}
 
-		color: #D8D8D8;
+		.subtitle{
+			margin-bottom: 76px;
 
-		font-family: "Montserrat-Regular";
-		font-size: 16px;
-	}
+			color: #D8D8D8;
 
-	button{
-		width: 165px;
-		height: 60px;
-		margin-bottom: 125px;
+			font-family: "Montserrat-Regular";
+			font-size: 16px;
+		}
 
-		cursor:pointer;
+		button{
+			width: 165px;
+			height: 60px;
+			margin-bottom: 125px;
 
-		color: #fff;
-		border: none;
-		border-top: 5px solid #fff;
-		border-radius: 5px;
-		outline: none;
-		background: #18CFAB;
+			cursor:pointer;
 
-		font-family: "Montserrat-Bold";
-		font-size: 13px;
+			color: #fff;
+			border: none;
+			border-top: 5px solid #fff;
+			border-radius: 5px;
+			outline: none;
+			background: #18CFAB;
 
-		&:hover{
-			color: #18cfab;
-			background: #fff;
+			font-family: "Montserrat-Bold";
+			font-size: 13px;
+
+			&:hover{
+				color: #18cfab;
+				background: #fff;
+			}
 		}
 	}
 }
@@ -712,6 +773,8 @@
 			}
 
 			.thumbnail{
+				cursor: pointer;
+
 				position: relative;
 
 				img{
@@ -761,6 +824,11 @@
 
 			font-family: "Montserrat-Light";
 			font-size: 14px;
+
+			a{
+				text-decoration: none;
+				color: inherit;
+			}
 		}
 	}
 }
@@ -1037,8 +1105,12 @@
 /*==== Section #testimonials Start ====*/
 
 .testimonials{
-	background: #2E404D;
+	background-image: url(../img/bg-review.jpg);
 
+	.container-fluid{
+		background: rgba(46,64,77, .5);
+
+	}
 	.block-title{
 		padding-top: 100px;
 
@@ -1153,43 +1225,34 @@
 			}
 		}
 
-		.btns{
+		.tab-prev, .tab-next{
 			position: absolute;
-			top: 0;
+			width: 30px;
+			height: 30px;
+			padding-top: 1px;
 
-			width: 100%;
-			padding-top: 18px;
+			color: #BBB;
+			border: 1px solid #BBB;
+			outline: none;
+			background: transparent;
 
-			.tab-prev, .tab-next{
-				width: 30px;
-				height: 30px;
-				padding-top: 1px;
+			font-size: 16px;
 
-				color: #BBB;
-				border: 1px solid #BBB;
-				outline: none;
-				background: transparent;
-
-				font-size: 16px;
-
-				&.active{
-					color: #fff;
-					border: none;
-					background: #18CFAB;
-				}
+			&.active{
+				color: #fff;
+				border: none;
+				background: #18CFAB;
 			}
+		}
 
-			.tab-prev{
-				float: left;
+		.tab-prev{
+			top: 15px;
+			left: 60px;
+		}
 
-				margin-left: 37px;
-			}
-
-			.tab-next{
-				float: right;
-
-				margin-right: 37px;
-			}
+		.tab-next{
+			top: 15px;
+			right: 60px;
 		}
 	}
 }
@@ -1334,30 +1397,6 @@
 			}
 		}
 	}
-	.modal{
-		display: none;
-		position: fixed;
-		background: rgba(0, 0, 0, .7);
-		top:0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-
-		.photo{
-			position: absolute;
-			right: 0;
-			left: 0;
-			top: 25%;
-			margin: auto;
-			width: 400px;
-			height: 400px;
-		}
-
-		&.active{
-			display: block;
-		}
-	}
-
 }
 
 /*==== Section #our-team End ====*/
@@ -1366,73 +1405,79 @@
 
 .clean-design{
 
-	background: #233641;
-	background-image: url(../img/grey_blind.png);
-	background-repeat: no-repeat;
-	background-position: left 90%;
-	background-size: 65% 65%;
+	background-image: url(../img/bg-cl-ds.jpg);
+	background-size: cover;
 
-	.block-title{
-		font-family: "Montserrat-Bold";
-		font-size: 51px;
-		color: #fff;
-		padding-top: 130px;
 
-		.green{
-			font-family: "Montserrat-Regular";
-			font-size: 47px;
-			color: #18CFAB;
-		}
-	}
+	.container-fluid{
+		background-color: rgba(0, 3, 0, 0.4);
+		background-image: url(../img/tablet.png);
+		background-repeat: no-repeat;
+		background-position: -35% 63%;
+		background-size: 65%;
 
-	.col-5{
+		.block-title{
+			font-family: "Montserrat-Bold";
+			font-size: 51px;
+			color: #fff;
+			padding-top: 130px;
 
-		.list{
-			padding: 0;
-			margin: 0;
-
-			.list-item{
-				display: inline-block;
-				width: 83.3333%;
-				position: relative;
-				font-family: "Montserrat-Light";
-				font-size: 14px;
-				line-height: 35px;
-				color: #fff;
-				padding-left: 14px;
-
-				&:before{
-					position: absolute;
-					top: 6px;
-					left: -30px;
-					content: url(../img/check.png);
-					width: 24px;
-					height: 24px;
-				}
+			.green{
+				font-family: "Montserrat-Regular";
+				font-size: 47px;
+				color: #18CFAB;
 			}
 		}
 
-		button{
-			margin-left: 50px;
-			margin-top: 70px;
-			margin-bottom: 215px;
-			width: 165px;
-			height: 60px;
-			cursor:pointer;
+		.col-5{
 
-			color: #fff;
-			border: none;
-			border-top: 5px solid #fff;
-			border-radius: 5px;
-			outline: none;
-			background: #18CFAB;
+			.list{
+				padding: 0;
+				margin: 0;
 
-			font-family: "Montserrat-Bold";
-			font-size: 13px;
+				.list-item{
+					display: inline-block;
+					width: 83.3333%;
+					position: relative;
+					font-family: "Montserrat-Light";
+					font-size: 14px;
+					line-height: 35px;
+					color: #fff;
+					padding-left: 14px;
 
-			&:hover{
-				color: #18cfab;
-				background: #fff;
+					&:before{
+						position: absolute;
+						top: 6px;
+						left: -30px;
+						content: url(../img/check.png);
+						width: 24px;
+						height: 24px;
+					}
+				}
+			}
+
+			button{
+				margin-left: 50px;
+				margin-top: 70px;
+				margin-bottom: 215px;
+				width: 165px;
+				height: 60px;
+				cursor:pointer;
+
+				color: #fff;
+				border: none;
+				border-top: 5px solid #fff;
+				border-radius: 5px;
+				outline: none;
+				background: #18CFAB;
+
+				font-family: "Montserrat-Bold";
+				font-size: 13px;
+
+				&:hover{
+					color: #18cfab;
+					background: #fff;
+				}
 			}
 		}
 	}
@@ -1445,11 +1490,9 @@
 .keep-in-touch{
 	padding-top: 130px;
 
-	.image{
-		img{
-			width: 100%;
-			height: 550px;
-		}
+	#map{
+		width: 100%;
+		height: 550px;
 	}
 
 	.col-9{
