--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -6,221 +6,227 @@ footer{
 	.container{
 		padding-top: 130px;
 
-		.first{
+		& >.row{
 
-			.logo{
-				font-family: "Montserrat-Regular";
-				font-size: 40;
-				color: #fff;
-				margin: 0;
+			margin-bottom: 125px;
 
-				.green{
-					font-family: "Montserrat-Bold";
-					color: #18CFAB;
-				}
-			}
+			.first{
 
-			.content{
-				font-family: "Montserrat-Light";
-				font-size: 14px;
-				line-height: 26px;
-				color: #B2B2B2;
-			}
-
-			.address{
-				color: #B2B2B2;
-
-				.title{
+				.logo{
 					font-family: "Montserrat-Regular";
-					font-size: 16px;
+					font-size: 40;
+					color: #fff;
+					margin: 0;
+
+					.green{
+						font-family: "Montserrat-Bold";
+						color: #18CFAB;
+					}
 				}
 
 				.content{
 					font-family: "Montserrat-Light";
 					font-size: 14px;
-				}
-			}
-
-			.contacts{
-				p{
+					line-height: 26px;
 					color: #B2B2B2;
-					font-family: "Montserrat-Regular";
-					font-size: 16px;
+				}
 
-					span{
+				.address{
+					color: #B2B2B2;
+
+					.title{
+						font-family: "Montserrat-Regular";
+						font-size: 16px;
+					}
+
+					.content{
 						font-family: "Montserrat-Light";
 						font-size: 14px;
 					}
 				}
-			}
-		}
 
-		.col-4{
-			.title{
-				font-family: "Montserrat-Bold";
-				font-size: 18px;
-				line-height: 26px;
-				color: #fff;
-				margin-bottom: 35px;
-			}
+				.contacts{
+					p{
+						color: #B2B2B2;
+						font-family: "Montserrat-Regular";
+						font-size: 16px;
 
-			.post{
-				cursor: pointer;
-
-				img{
-					width: 77px;
-					height: 66px;
-				}
-
-				.post-title{
-					font-family: "Montserrat-Bold";
-					font-size: 16px;
-					line-height: 16px;
-					color: #fff;
-					margin: 0;
-					margin-bottom: 5px;
-					padding-left: 9px;
-				}
-				
-				.post-content{
-					font-family: "Montserrat-Light";
-					font-size: 14px;
-					line-height: 25px;
-					color: #B2B2B2;
-					padding-left: 9px;
-				}
-
-				.post-date{
-					font-family: "Montserrat-Light";
-					font-size: 14px;
-					line-height: 30px;
-					color: #fff;
-					margin-bottom: 25px;
-					padding-left: 9px;
-				}
-
-				&:hover{
-					.post-title{
-						color: #18CFAB;
+						span{
+							font-family: "Montserrat-Light";
+							font-size: 14px;
+						}
 					}
 				}
 			}
 
-			hr{
-				border: none;
-				border: 1px solid #294453;
-				margin-bottom: 33px;
-			}
-		}
-
-		.second{
-
-			.title{
-				font-family: "Montserrat-Bold";
-				font-size: 18px;
-				line-height: 26px;
-				color: #fff;
-				margin: 0;
-				margin-bottom: 35px;
-			}
-
-			.tag-one{
-				display: inline-block;
-				border: 1px solid #D7D7D7;
-				padding: 10px 14px;
-				font-family: "Montserrat-Light";
-				font-size: 14px;
-				color: #B8B8B8;
-				text-decoration: none;
-				margin-right: 4px;
-				margin-bottom: 8px;
-
-				&:hover{
-					background: #18CFAB;
+			.col-4{
+				.title{
+					font-family: "Montserrat-Bold";
+					font-size: 18px;
+					line-height: 26px;
 					color: #fff;
+					margin-bottom: 35px;
+				}
+
+				.post{
+					cursor: pointer;
+
+					img{
+						width: 77px;
+						height: 66px;
+					}
+
+					.post-title{
+						font-family: "Montserrat-Bold";
+						font-size: 16px;
+						line-height: 16px;
+						color: #fff;
+						margin: 0;
+						margin-bottom: 5px;
+						padding-left: 9px;
+					}
+
+					.post-content{
+						font-family: "Montserrat-Light";
+						font-size: 14px;
+						line-height: 25px;
+						color: #B2B2B2;
+						padding-left: 9px;
+					}
+
+					.post-date{
+						font-family: "Montserrat-Light";
+						font-size: 14px;
+						line-height: 30px;
+						color: #fff;
+						margin-bottom: 25px;
+						padding-left: 9px;
+					}
+
+					&:hover{
+						.post-title{
+							color: #18CFAB;
+						}
+					}
+				}
+
+				hr{
+					border: none;
+					border: 1px solid #294453;
+					margin-bottom: 33px;
 				}
 			}
 
-			hr{
-				border: none;
-				border: 1px solid #294453;
-				margin-bottom: 33px;
-				margin-top: 28px;
-			}
+			.second{
 
-			.content{
-				width: 215px;
-				font-family: "Montserrat-Light";
-				font-size: 14px;
-				line-height: 26px;
-				color: #B4B4B4;
-			}
+				.title{
+					font-family: "Montserrat-Bold";
+					font-size: 18px;
+					line-height: 26px;
+					color: #fff;
+					margin: 0;
+					margin-bottom: 35px;
+				}
 
-			form{
-				display: flex;
+				.tag-one{
+					display: inline-block;
+					border: 1px solid #D7D7D7;
+					padding: 10px 14px;
+					font-family: "Montserrat-Light";
+					font-size: 14px;
+					color: #B8B8B8;
+					text-decoration: none;
+					margin-right: 4px;
+					margin-bottom: 8px;
 
-				input{
-					width: 80%;
-					height: 42px;
-					padding-left: 12px;
-					outline: none;
+					&:hover{
+						background: #18CFAB;
+						color: #fff;
+					}
+				}
+
+				hr{
 					border: none;
-					background: #22353F;
+					border: 1px solid #294453;
+					margin-bottom: 33px;
+					margin-top: 28px;
+				}
+
+				.content{
+					width: 215px;
 					font-family: "Montserrat-Light";
 					font-size: 14px;
 					line-height: 26px;
-					color: #fff;
+					color: #B4B4B4;
+				}
 
-					&::-webkit-placeholder{
+				form{
+					display: flex;
+
+					input{
+						width: 80%;
+						height: 42px;
+						padding-left: 12px;
+						outline: none;
+						border: none;
+						background: #22353F;
 						font-family: "Montserrat-Light";
 						font-size: 14px;
 						line-height: 26px;
-						color: #757575;
+						color: #fff;
+
+						&::-webkit-placeholder{
+							font-family: "Montserrat-Light";
+							font-size: 14px;
+							line-height: 26px;
+							color: #757575;
+						}
+					}
+
+					button{
+						outline: none;
+						border: none;
+						width: 20%;
+						height: 42px;
+						font-family: "Montserrat-Bold";
+						font-size: 14px;
+						line-height: 26px;
+						color: #1ABC9F;
+						background: #294453;
+
+						&:hover{
+							background: #1ABC9F;
+							color: #294453;
+						}
 					}
 				}
 
-				button{
-					outline: none;
-					border: none;
-					width: 20%;
-					height: 42px;
+			}
+
+			.col-2{
+
+				.title{
 					font-family: "Montserrat-Bold";
-					font-size: 14px;
+					font-size: 18px;
 					line-height: 26px;
-					color: #1ABC9F;
-					background: #294453;
+					color: #fff;
+					margin: 0;
+					margin-bottom: 35px;
+				}
 
-					&:hover{
-						background: #1ABC9F;
-						color: #294453;
+				.flick{
+					display: inline-block;
+					margin-right: 15px;
+					margin-bottom: 15px;
+
+					img{
+						width: 74px;
+						height: 74px;
 					}
 				}
 			}
-
 		}
 
-		.col-2{
-
-			.title{
-				font-family: "Montserrat-Bold";
-				font-size: 18px;
-				line-height: 26px;
-				color: #fff;
-				margin: 0;
-				margin-bottom: 35px;
-			}
-
-			.flick{
-				display: inline-block;
-				margin-right: 15px;
-				margin-bottom: 15px;
-
-				img{
-					width: 74px;
-					height: 74px;
-				}
-			}
-		}
 	}
 
 	.copyright{
